# GPT-2-Rebuild

./: README.md  play.ipynb  pyproject.toml  train_gt2.py
.github/workflows/: cicd.yml
dataloader/: data_loader_lite.py
model_architectures/: GPT.py  architecture_building_blocks.py
src/config/: GPTConfig.py
src/dataloader/: data_loader_lite.py
src/model_architectures/: GPT.py  MLP.py  architecture_building_blocks.py
tests/: test_MLP.py  test_casual_self_attention.py  test_data_loader_lite.py  test_example.py  test_gpt_module.py
tests/data/: test_dataset.txt
