[tool.poetry]
name = "gpt-2-rebuild"
version = "0.1.0"
description = ""
authors = ["Stephan Meyer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
jupyter = "^1.0.0"
transformers = "^4.41.2"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
